updated help section

--- a/app/src/main/res/layout/help_pager_page.xml
+++ b/app/src/main/res/layout/help_pager_page.xml
@@ -2,26 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
   <ImageView
       android:id="@+id/help_image"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="5"
-      android:background="@color/colorPrimaryDark"
+      android:background="@android:color/white"
+      android:layout_marginLeft="10dp"
+      android:layout_marginRight="10dp"
       />
 
   <ScrollView
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="0dp"
+      android:background="@android:color/white"
       android:layout_weight="3"
+      android:layout_marginLeft="10dp"
+      android:layout_marginRight="10dp"
+      android:layout_marginBottom="15dp"
       >
 
     <TextView
         android:id="@+id/help_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="15dp"
         />
 
   </ScrollView>
