--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,11 @@
     <item name="android:statusBarColor">@android:color/transparent</item>
   </style>
 
+  <style name="FullscreenTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <!-- Customize your theme here. -->
+    <item name="android:windowTranslucentStatus">true</item>
+  </style>
+
   <style name="PrefsText">
     <item name="android:textColor">@android:color/black</item>
     <item name="android:layout_width">0dp</item>
