--- a/app/src/main/res/layout/fragment_preferences.xml
+++ b/app/src/main/res/layout/fragment_preferences.xml
@@ -57,6 +57,24 @@
         />
   </LinearLayout>
 
+
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      android:layout_gravity="center_horizontal">
+    <TextView
+        style="@style/PrefsText"
+        android:text="@string/color_format_label"/>
+    <Spinner
+        android:id="@+id/spinner_color_format"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:popupBackground="@color/colorPrimary"
+        android:gravity="end"
+        />
+  </LinearLayout>
+
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
