--- a/app/src/main/res/layout/activity_koloro.xml
+++ b/app/src/main/res/layout/activity_koloro.xml
@@ -101,7 +101,7 @@
               android:gravity="center"
               android:drawableLeft="@drawable/ic_shop_black_24dp"
               android:padding="12dp"
-              />
+              /> <!-- no shadow? -->
         </LinearLayout>
       </ScrollView>
     </RelativeLayout>
