--- a/app/src/main/res/layout/fragment_preferences.xml
+++ b/app/src/main/res/layout/fragment_preferences.xml
@@ -75,19 +75,34 @@
         />
   </LinearLayout>
 
-  <LinearLayout
+  <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="horizontal"
-      android:layout_gravity="center_horizontal">
-    <TextView
-        style="@style/PrefsText"
-        android:text="@string/quick_launch_label"
+      >
+    <FrameLayout
+        android:id="@+id/quick_launch_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
         />
-    <Switch
-        android:id="@+id/switch_quick_launch"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/quick_launch_group"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
-  </LinearLayout>
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal">
+      <TextView
+          android:id="@+id/quick_launch_label"
+          style="@style/PrefsText"
+          android:text="@string/quick_launch_label"
+          />
+      <Switch
+          android:id="@+id/switch_quick_launch"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          />
+    </LinearLayout>
+  </RelativeLayout>
+
+
+
 </LinearLayout>
