--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -24,15 +24,15 @@
         android:layout_height="match_parent"
         />
 
-    <Button
-        android:id="@+id/zoom_button"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:text="ZOOM"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:background="@android:color/holo_blue_bright"
-        android:visibility="visible"
+    <ImageView
+        android:id="@+id/zoomed_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:background="@color/zoomed_image_background"
+        android:visibility="gone"
         />
 
     <LinearLayout
