--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
   <color name="picker_background_grey_opaque">#58b0bec5</color>
 
   <color name="zoomed_image_background">#c4757575</color>
+
+  <color name="text_disabled">#bdbdbd</color>
 </resources>
