--- a/app/src/main/res/layout/activity_koloro.xml
+++ b/app/src/main/res/layout/activity_koloro.xml
@@ -99,6 +99,7 @@
               android:text="@string/upgrade_button_text"
               android:background="@android:color/white"
               android:gravity="center"
+              android:visibility="gone"
               android:drawableLeft="@drawable/ic_shop_black_24dp"
               android:padding="12dp"
               />
