--- a/app/src/main/res/layout/fragment_preferences.xml
+++ b/app/src/main/res/layout/fragment_preferences.xml
@@ -100,6 +100,7 @@
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:visibility="gone"
       >
     <TextView
         android:id="@+id/quick_launch_label"
